# dpdk-rs

./: Cargo.toml  Makefile  README.md  al2022.sh  awsena.md  build.rs  inlined.c  linux.mk  linuxaws.mk  windows.mk
.github/workflows/: build.yml  main.yml
src/: lib.rs
