# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "dpdk-rs"
version = "1.0.3"
authors = [ "Microsoft Corporation" ]
edition = "2018"
description = "Rust Bindings for Libdpdk"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/dpdk-rs"
license-file = "LICENSE"

[dependencies]
cfg-if = "1.0.0"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"

[features]
mlx4 = []
mlx5 = []

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
