# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.

[package]
name = "dpdk-rs"
version = "1.0.4"
authors = [ "Microsoft Corporation" ]
edition = "2021"
description = "Rust Bindings for Libdpdk"
readme = "README.md"
homepage = "https://aka.ms/demikernel"
repository = "https://github.com/demikernel/dpdk-rs"
license-file = "LICENSE.txt"

[dependencies]
cfg-if = "1.0.0"

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"

[features]
mlx4 = []
mlx5 = []

# Build profile used for releases.
[profile.release]
opt-level = 3             # Enable all compiler optimizations.
debug = false             # Do not include any debug info in the binary.
debug-assertions = false  # Do not include any debug assertions in the binary.
overflow-checks = false   # Do not check for overflows at runtime.
lto = "fat"               # Perform link time optimizations across all dependencies (overridden).
panic = "abort"           # Terminate the process upon panic (overridden).
incremental = false       # Disable incremental compilation.
codegen-units = 1         # Produce a single code generation unit (overridden).
rpath = false             # Disable runtime search path.
